# ISEP_A3-vulnerable_dummy_website

./: .gitignore  Cargo.toml  Rocket.toml
src/: main.rs  web.rs
src/www/: api.rs  static.rs
static/: header.html.hbs  index.html.hbs  profile.html  profile.html.hbs  sign.html
static/articles/: first.html.hbs
static/articles/foo-101/: part-1.html.hbs  part-2.html.hbs
