[package]
name = "vulnerable_dummy_website"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
either = "1"
rand = { version = "0", features = ["getrandom"] }
rocket = { version = "0.5.0-rc.1", features = ["secrets", "json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["sqlite_pool"] }
serde = "1"
serde_json = "1"
sha2 = "0"
